--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'io.apisense:rhino-android:1.0'
     implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
     def room_version = "1.1.1"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
