--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,7 @@ dependencies {
     implementation "android.arch.persistence.room:rxjava2:$room_version"
     implementation "android.arch.persistence.room:guava:$room_version"
     testImplementation "android.arch.persistence.room:testing:$room_version"
+    implementation 'com.rmtheis:tess-two:6.3.0'
+    implementation  'com.android.support:support-v4:13.0.+'
     implementation files('libs/MathParser.org-mXparser-v.4.2.0-jdk.1.8.jar')
 }
