--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".HistoActivity"/>
         <activity android:name=".GraphActivity"/>
+        <activity android:name=".PlotActivity"/>
     </application>
 
 </manifest>
