--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     implementation "android.arch.persistence.room:guava:$room_version"
     testImplementation "android.arch.persistence.room:testing:$room_version"
     implementation files('libs/MathParser.org-mXparser-v.4.2.0-jdk.1.8.jar')
+    implementation 'com.google.android.gms:play-services-drive:11.6.0'
+    implementation 'com.google.android.gms:play-services-auth:11.6.0'
+
 }
